# circuit-chan

./: .gitignore  CHANGES.txt  CMakeLists.txt  LICENSE.md  README.md  build_all_windows.bat  circuit-system.md  story.md
_builds/: CircuitGame_01.7z  CircuitGame_02.7z
_external_shared/KalaWindow/: CHANGES.txt  README.md
_external_shared/KalaWindow/include/core/: audio.hpp  containers.hpp  core.hpp  input.hpp  log.hpp  platform.hpp
_external_shared/KalaWindow/include/graphics/: texture.hpp  window.hpp
_external_shared/KalaWindow/include/graphics/opengl/: opengl.hpp  opengl_core.hpp  opengl_linux.hpp  opengl_win.hpp  shader_opengl.hpp  texture_opengl.hpp
_external_shared/KalaWindow/include/graphics/vulkan/: enums_vulkan.hpp  extensions_vulkan.hpp  shader_vulkan.hpp  texture_vulkan.hpp  vulkan.hpp
_external_shared/KalaWindow/include/imgui/backends/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
_external_shared/KalaWindow/include/windows/: messageloop.hpp
_external_shared/imgui/: CHANGES.txt
files/shaders/: basic.frag  basic.vert  cube.frag  cube.vert  triangle_opengl.frag  triangle_opengl.vert  triangle_vulkan.vert
include/core/: core.hpp  gamecore.hpp  playerinput.hpp
include/gameobjects/: cube.hpp  dirlight.hpp  gameobject.hpp  pointlight.hpp
include/graphics/: camera.hpp  cube.hpp  render.hpp  texture.hpp  triangle_opengl.hpp
include/graphics/opengl/: render_opengl.hpp  triangle_opengl.hpp
include/graphics/vulkan/: render_vulkan.hpp  triangle_vulkan.hpp
src/: main.cpp
src/core/: core.cpp  gamecore.cpp  playerinput.cpp
src/gameobjects/: cube.cpp  dirlight.cpp
src/graphics/: camera.cpp  cube.cpp  render.cpp  texture.cpp  triangle_opengl.cpp
src/graphics/opengl/: render_opengl.cpp  triangle_opengl.cpp
src/graphics/vulkan/: render_vulkan.cpp  triangle_vulkan.cpp
